Baaner: Fix label spacing

--- a/W88.m/_Static/scss/partials/_banner.scss
+++ b/W88.m/_Static/scss/partials/_banner.scss
@@ -118,9 +118,11 @@
         h2{
             font-size: 20px;
             color: #fff;
+            margin-bottom: 0px;
         }
         p{
             color: #fff;
+            margin-bottom: 5px;
         }
     }
 }
